[package]
name = "srt-rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
byteorder = "1.5.0"
bytes = "1.5.0"
crc_all = "0.2.2"
futures-util = "0.3.30"
rand = "0.8.5"
srt-rs = { git = "https://github.com/fundraise-arcade/srt-rs.git", version = "0.3.0" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
