[package]
name = "srust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
bytes = "1.5.0"
crc_all = "0.2.2"
futures-util = "0.3.30"
rand = "0.8.5"
srt-rs = { git = "https://github.com/fundraise-arcade/srt-rs.git", version = "0.3.0" }
streamid = { git = "https://github.com/fundraise-arcade/streamid.git", version = "0.1.0" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }

[lib]
name = "srust"
path = "src/lib.rs"

[[bin]]
name = "srust"
path = "src/main.rs"
